Codigo da julia inserido

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "stdbool.h": "c",
+        "progmod.h": "c",
+        "matadj.h": "c",
+        "cityfunctions.h": "c"
     }
 }
